# xiaomi-miloco

./: .clang-format  .gitignore  LICENSE.md  README.md  README.zh_Hans.md  README_zh_Hans.md
docker/: TODO.md  (+5 more)
miloco_ai_engine/: __init__.py  main.py  pyproject.toml
miloco_ai_engine/config/: __init__.py  config.py  config_info.py  config_optimizer.py
miloco_ai_engine/core/: llama-mico.cpp  llama-mico.h
miloco_ai_engine/core/batch_scheduling/: CMakeLists.txt  batch-scheduler.cpp  batch-scheduler.h  encoder-scheduler.cpp  encoder-scheduler.h  llm-scheduler.cpp  llm-scheduler.h
miloco_ai_engine/core/cache_manager/: CMakeLists.txt  chunk-infer-cache.cpp  chunk-infer-cache.h  image-embedding-cache.cpp  image-embedding-cache.h
miloco_ai_engine/core/utils/: CMakeLists.txt  chunk-hash.cpp  chunk-hash.h  llama-memory-scheduling.cpp  llama-memory-scheduling.h  mico-common.h  mico-config.cpp  mico-config.h  mico-dialog-util.h
miloco_ai_engine/core_python/: __init__.py  lib_manager.py  llama_mico.py
miloco_ai_engine/middleware/: __init__.py  exception_handler.py  exceptions.py
miloco_ai_engine/model_manager/: __init__.py  model_manager.py  model_wrapper.py
miloco_ai_engine/schema/: __init__.py  actor_message.py  common_schema.py  models_schema.py
miloco_ai_engine/task_scheduler/: __init__.py  model_scheduler.py  scheduler_task.py
miloco_ai_engine/tests/: conftest.py  test_restful_api.py  test_restful_api_with_env.py  test_task_scheduler.py
miloco_ai_engine/utils/: __init__.py  cuda_info.py  image_process.py  mico_content_util.py  prompt_matcher.py  utils.py
(+333 files in other folders)
